participant "InvalidNumberFormatException" as InvalidNumberFormatException

@startuml


hide circle
skinparam classAttributeIconSize 0


    class DeleteIncomeCommand {
        # String input
        # CommandType commandType
        # String outputMessage
        + DeleteIncomeCommand(String input)
        + execute(List<Income> incomes, ExpenseList expenseList)
    }
    abstract class "{abstract} \n Command" {
        + Command(String input)
        + CommandType commandType
    }



    class InvalidNumberFormatException{
        + InvalidNumberFormatException(String message)
    }



    class ExpenseList



    class Income {
        + String getCategory()
        + Double getAmount()
    }




DeleteIncomeCommand --|> "{abstract} \n Command"
DeleteIncomeCommand --> InvalidNumberFormatException : throws
DeleteIncomeCommand --> Income : uses
DeleteIncomeCommand --> ExpenseList : uses

@enduml